# BestWay

./: .gitignore  Dockerfile  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
config/: nginx-local.conf
migrations/: env.py
migrations/versions/: 2025_03_23_0136-8a9875b37b70_initial_migrations.py  2025_03_26_1525-8b67473ec1b7_add_photo_table.py  2025_06_07_1658-18971a54629b_remove_photo_from_comment.py
src/: main.py
src/api/: __init__.py  auth.py  dto.py  health.py  schemas.py  users.py
src/api/admin/: comments.py  images.py  likes.py  places.py  routes.py  schemas.py  surveys.py  users.py
src/api/handlers/: comments.py  likes.py  places.py  posts.py  routes.py
src/api/middlewares/: exceptions.py  get_jwt_token_user.py
src/api/permissions/: exceptions.py  is_admin.py  is_authenticated.py
src/api/public/: auth.py  comments.py  likes.py  places.py  profile.py  routes.py  schemas.py  surveys.py
src/api/public/handlers/: routes.py
src/application/: constants.py  exceptions.py  utils.py
src/application/use_cases/: __init__.py  dto.py
src/application/use_cases/auth/: check_code.py  dto.py  phone_change.py  send_code.py
src/application/use_cases/comments/: create.py  dto.py
src/application/use_cases/common/: delete.py  dto.py  list.py
src/application/use_cases/common/photo/: delete.py  photo.py  photos.py  upload.py
src/application/use_cases/likes/: create.py  dto.py
src/application/use_cases/models/: dto.py  field_values.py
src/application/use_cases/places/: add_photos.py  create.py  dto.py  photo.py
src/application/use_cases/posts/: create.py  feed.py
src/application/use_cases/routes/: add_photos.py  avatar.py  chatgpt_create.py  copy.py  create.py  dto.py
src/application/use_cases/routes/feed/: list.py  retrieve.py
src/application/use_cases/routes/places/: remove.py  update_order.py
src/application/use_cases/surveys/: dto.py  update.py
src/application/use_cases/tasks/: route_generate.py
src/application/use_cases/users/: create.py  create_user.py  delete_user.py  dto.py  list.py  photo.py  retrieve.py  update.py  update_user.py
src/common/: dto.py
src/config/: app_factory.py  celery.py  containers.py  exceptions.py  loggers.py  settings.py  uptrace.py
src/domain/: exceptions.py
src/domain/entities/: comment.py  dto.py  enums.py  like.py  place.py  resource.py  route.py  route_places.py  survey.py  user.py
src/domain/filters/: __init__.py  filters.py
src/domain/validators/: __init__.py  base.py  dto.py
src/infrastructure/managers/: base.py  dto.py  enum.py  jwt_manager.py  local_storage.py  paginator.py  proxy_client.py  sms_client.py
src/infrastructure/managers/ChatGPT/: base.py  constants.py  dto.py  route_chatgpt_manager.py  utils.py
src/infrastructure/models/alchemy/: __init__.py  posts.py  routes.py  surveys.py  users.py
src/infrastructure/notifications/: notifier.py
src/infrastructure/orm/: __init__.py  base.py  dependencies.py
src/infrastructure/permissions/: constants.py  decorators.py  dependencies.py  enums.py  permission_checker.py
src/infrastructure/redis/: base.py  redis_cache.py
src/infrastructure/repositories/: base.py
src/infrastructure/repositories/alchemy/: __init__.py  base.py  comments.py  db.py  likes.py  places.py  posts.py  route_places.py  routes.py  survey.py  user.py
src/infrastructure/repositories/interfaces/: __init__.py  base.py  comment.py  like.py  photo.py  place.py  route.py  route_places.py  user.py
src/infrastructure/tasks/: routes.py
src/infrastructure/uow/: alchemy.py  base.py
